--- a/unit_1/index.html
+++ b/unit_1/index.html
@@ -6,6 +6,6 @@
 </head>
 <body>
 	<h1>headcase hair</h1>
-	<p>Best hair salon in Sydney and the world!</p>
+	<p>Best hair salon in Sydney!</p>
 </body>
 </html>
