--- a/unit_3/index.html
+++ b/unit_3/index.html
@@ -6,20 +6,18 @@
 </head>
 <body>
 	<header>
-	<div id="logo">
-		<img src="images/new_logo_small.png">
-	</div>
+		<img src="images/new_logo_small.png" id="logo">
 		<nav>
 			<ul>
-			<li><a href="profile.html">Profile</a></li>
-			<li><a href="gallery.html">Gallery</a></li>
-			<li><a href="education">Education</a></li>
-			<li><a href="consulting">Consulting</a></li>
-			<li><a href="contact">Contact</a></li>
+				<li><a href="profile.html">Profile</a></li>
+				<li><a href="gallery.html">Gallery</a></li>
+				<li><a href="education">Education</a></li>
+				<li><a href="consulting">Consulting</a></li>
+				<li><a href="contact">Contact</a></li>
 			</ul>
 		</nav>
 	</header>
-		<h1>Vincent Nobile</h1>
-		<h3>Colourist</h3>
-	</body>
+	<h1>Vincent Nobile</h1>
+	<h3>Colourist</h3>
+</body>
 </html>
