--- a/unit_6/updated html and css/index.html
+++ b/unit_6/updated html and css/index.html
@@ -4,7 +4,8 @@
 	<meta charset="UTF-8">
 	<title>Vincent Nobile</title>
 	<link rel="stylesheet" type="text/css" href="style.css"/>
-	<link href='https://fonts.googleapis.com/css?family=Raleway:400,100,700' rel='stylesheet' type='text/css'>
+	<!--<link href='https://fonts.googleapis.com/css?family=Raleway:400,100,700' rel='stylesheet' type='text/css'>-->
+	<link href='https://fonts.googleapis.com/css?family=Megrim' rel='stylesheet' type='text/css'>
 	<link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,100' rel='stylesheet' type='text/css'>
 </head>
 <body>
@@ -22,15 +23,17 @@
 		<h1>Vincent Nobile</h1>
 		<h2>Colourist</h2>
 	</section>
-	<section id="profile" class="clearfix">
-		<h2>Vincent Nobile:</h2> 
-		<p>: : co-owner of Headcase Hair and director of the Colour Team is a major force behind luxury editorial hair colour in Australia.</p>
+	<section id="two_column" class="clearfix">
+		<aside id="left">
+			<h2>Vincent Nobile:</h2> 
+			<p>: : co-owner of Headcase Hair and director of the Colour Team is a major force behind luxury editorial hair colour in Australia.</p>
+		</aside>
 		<!--<article>
 			<p>Nobile is known for creating precision colour for some of Australia&#146;s leading celebrities, models and international faces. He is revered for being the person to see when a colour needs fixing and notorious for his expertise with blonde precision colour.</p>
 			<p>Nobile frequents New York and travels globally  teaching seminars, colour presentations and major hair shows. He is renowned for his strong presence in the industry as a platform artist and educator.</p>
-			<p>Awarded some of the top accolades within the hairdressing industry, Nobile aims is to raise the standard of colouring across the hairdressing industry.</p>
+			<p>Awarded some of the top accolades within the hairdressing industry, Nobile aims is to raise the standard of colouring across the hairdressing industry.</p>-->
 		</article>
-		<blockquote>Hair colour is like a beautiful painting, reflecting light and shade with lots of dimension. It should be seamless and continually flow through the hair with perfect harmony. For every look, I work with the complexion, features, eye colour and natural texture accentuating the natural beauty. Great colour should always evolve with the client.</blockquote><cite>Vincent Nobile.</cite>-->
+		<blockquote id="right">Hair colour is like a beautiful painting, reflecting light and shade with lots of dimension. It should be seamless and continually flow through the hair with perfect harmony. For every look, I work with the complexion, features, eye colour and natural texture accentuating the natural beauty. Great colour should always evolve with the client.</blockquote><cite>Vincent Nobile.</cite>
 	</section>
 	<section id="gallery" class="clearfix">
 			<img src="images/short_blonde_hair.jpg" alt="Model with short blonde swept back hair">
@@ -41,7 +44,6 @@
 			<img src="images/long_red.jpg" alt="Model with long red hair">
 			<img src="images/short_blonde_hair.jpg" alt="Model with short blonde swept back hair">
 			<img src="images/red_hair_up.jpg" alt="Model with bright red hair worn up">
-			<img src="images/red_curls.jpg" alt="Model with red curly hair">
 			<img src="images/blonde_over.jpg" alt="Model with long blonde hair">
 	</section>
 	<section id="education">
