--- a/unit_8/index.html
+++ b/unit_8/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta charset="UTF-8">
 	<title>Vincent Nobile</title>
 	<link rel="stylesheet" type="text/css" href="style.css"/>
@@ -11,7 +12,7 @@
 </head>
 <body>
 	<section id="home" class="clearfix">
-		<img src="images/new_logo_small.png">
+		<div id="nav" class="clearfix">
 		<nav>
 			<ul>
 				<li><a href="#profile">Profile</a></li>
@@ -21,8 +22,11 @@
 				<li><a href="#contact">Contact</a></li>
 			</ul> 
 		</nav>
+		</div>
+		<div id="h">
 		<h1>Vincent Nobile</h1>
 		<h2>Colourist</h2>
+		</div>
 	</section>
 	<section id="profile" class="clearfix">
 			<h2>Vincent Nobile:</h2>
@@ -34,19 +38,19 @@
 			</div>
 	</section>
 	<section id="gallery" class="clearfix">
-			<img src="images/short_blonde_hair.jpg" alt="Model with short blonde swept back hair">
-			<img src="images/red_hair_up.jpg" alt="Model with bright red hair worn up">
-			<img src="images/paint_splash.jpg" alt="Model with brown hair with bright red paint splatters">
-			<img src="images/undercut_blonde.jpg" alt="Model with cropped blonde hair">
-			<img src="images/red_bob.jpg" alt="Model with red bob">
-			<img src="images/long_red.jpg" alt="Model with long red hair">
-			<img src="images/short_blonde_hair.jpg" alt="Model with short blonde swept back hair">
-			<img src="images/red_hair_up.jpg" alt="Model with bright red hair worn up">
-			<img src="images/blonde_over.jpg" alt="Model with long blonde hair">
+			<img src="images/2014_1.jpg" alt="Model with short blonde swept back hair">
+			<img src="images/2014_2.jpg" alt="Model with bright red hair worn up">
+			<img src="images/2015_1.jpg" alt="Model with brown hair with bright red paint splatters">
+			<img src="images/2015_2.jpg" alt="Model with cropped blonde hair">
+			<img src="images/2014_3.jpg" alt="Model with red bob">
+			<img src="images/2014_4.jpg" alt="Model with long red hair">
+			<img src="images/2015_3.jpg" alt="Model with short blonde swept back hair">
+			<img src="images/2015_4.jpg" alt="Model with bright red hair worn up">
+			<img src="images/2014_5.jpg" alt="Model with long blonde hair">
 	</section>
 	<div id="blockquote">
 	<blockquote>
-		<p>Hair colour is like a beautiful painting, reflecting light and shade with lots of dimension. It should be seamless and continually flow through the hair with perfect harmony. For every look, I work with the complexion, features, eye colour and natural texture accentuating the natural beauty. Great colour should always evolve with the client.
+		<p>Hair colour is like a beautiful painting, reflecting light and shade with lots of dimension. It should be seamless and continually flow through the hair with perfect harmony. For every look, I work with the complexion, features, eye colour and natural texture accentuating the natural beauty. Great colour should evolve with the client.
 		</p>
 		</blockquote>
 		<footer id="quote">- Vincent Nobile</footer>
