--- a/unit_8/index.html
+++ b/unit_8/index.html
@@ -29,24 +29,23 @@
 		</div>
 	</section>
 	<section id="profile" class="clearfix">
-			<h2>Vincent Nobile:</h2>
-			<div class="paragraph">
-				<p>: : co-owner of Headcase Hair and director of the Colour Team is a major force behind luxury editorial hair colour in Australia.</p>
+			<div class="paragraph" class="clearfix">
+				<p>: : co-owner of Headcase Hair and director of the Colour Team&#44; Vincent Nobile is a major force behind luxury editorial hair colour in Australia.</p>
+				<div id="main">
 				<p>Nobile is known for creating precision colour for some of Australia&#146;s leading celebrities, models and international faces. He is revered for being the person to see when a colour needs fixing and notorious for his expertise with blonde precision colour.</p>
 				<p>Nobile frequents New York and travels globally  teaching seminars, colour presentations and major hair shows. He is renowned for his strong presence in the industry as a platform artist and educator.</p>
 				<p>Awarded some of the top accolades within the hairdressing industry, Nobile aims is to raise the standard of colouring across the hairdressing industry.</p>
+				</div>
+				<span id="media">Learn More</span>
 			</div>
 	</section>
 	<section id="gallery" class="clearfix">
 			<img src="images/2014_1.jpg" alt="Model with short blonde swept back hair">
 			<img src="images/2014_2.jpg" alt="Model with bright red hair worn up">
-			<img src="images/2015_1.jpg" alt="Model with brown hair with bright red paint splatters">
-			<img src="images/2015_2.jpg" alt="Model with cropped blonde hair">
-			<img src="images/2014_3.jpg" alt="Model with red bob">
 			<img src="images/2014_4.jpg" alt="Model with long red hair">
 			<img src="images/2015_3.jpg" alt="Model with short blonde swept back hair">
 			<img src="images/2015_4.jpg" alt="Model with bright red hair worn up">
-			<img src="images/2014_5.jpg" alt="Model with long blonde hair">
+			<img src="images/2015_1.jpg" alt="Model with brown hair with bright red paint splatters">
 	</section>
 	<div id="blockquote">
 	<blockquote>
@@ -55,11 +54,12 @@
 		</blockquote>
 		<footer id="quote">- Vincent Nobile</footer>
 	</div>
-	<div id="two_column" class="clearfix">
+	<div id="two_column" class="expand" class="clearfix">
 	<section id="education">
 		<h2>Education</h2>
-		<div class="paragraph">
-			<p>Vincent is one of Australia&#146;s top Educators in his field. Vincent is available for group and one on one training. He specialises in teaching:</p>
+		<div class="paragraph" class="clearfix">
+			<p>Vincent is one of Australia&#146;s top Educators in his field. Vincent is available for group and one on one training.</p>
+			<p id="hidden1">He specialises in teaching:</p>
 		</div>
 		<ul>
 			<li>Colouring Fundamentals</li>
@@ -71,8 +71,9 @@
 	</section>
 	<section id="consulting">
 		<h2>Consulting</h2>
-		<div class="paragraph">
-			<p>Take advantage of Vincent&#146;s many years of experience and get his help in buiding you business and career. Vincent is availalbe for Consulting and can help you with:</p>
+		<div class="paragraph" class="clearfix">
+			<p>Take advantage of Vincent&#146;s many years of experience and get his help in buiding you business and career.</p>
+			<p id="hidden2">Vincent is availalbe for Consulting and can help you with:</p>
 		</div>
 		<ul>
 			<li>Mentoring</li>
@@ -89,9 +90,8 @@
 		<ul>
 			<li>Contact</li>
 			<li>About</li>
-			<li>More Infomation</li>
+			<li>More Info</li>
 		</ul>
-		
 	</footer>
 </body>
-</html
+</html>
