--- a/unit_9/index.html
+++ b/unit_9/index.html
@@ -40,12 +40,12 @@
 			</div>
 	</section>
 	<section id="gallery" class="clearfix">
-			<img src="images/2014_1.jpg" alt="Model with short blonde swept back hair">
-			<img src="images/2014_2.jpg" alt="Model with bright red hair worn up">
-			<img src="images/2014_4.jpg" alt="Model with long red hair">
-			<img src="images/2015_3.jpg" alt="Model with short blonde swept back hair">
-			<img src="images/2015_4.jpg" alt="Model with bright red hair worn up">
-			<img src="images/2015_1.jpg" alt="Model with brown hair with bright red paint splatters">
+			<img src="images/2014_1.jpg" alt="Model with red curls">
+			<img src="images/2014_2.jpg" alt="Model with long blonde hair">
+			<img src="images/2014_4.jpg" alt="Model with long yellow hair">
+			<img src="images/2015_3.jpg" alt="Model with short blonde hair with blue highlights">
+			<img src="images/2015_4.jpg" alt="Model with black and red hair">
+			<img src="images/2015_1.jpg" alt="Model with white, indigo nad pink hair">
 	</section>
 	<div id="blockquote">
 	<blockquote>
@@ -88,9 +88,9 @@
 	</div>
 	<footer id="footer">
 		<ul>
-			<li>Contact</li>
-			<li>About</li>
-			<li>More Info</li>
+			<li><a href="mailto:info@vincentnobile.com?Subject=More%20Info!" target="_top">Contact</a></li>
+			<li><a href="#profile">About</a></li>
+			<li><a href="http://www.headcasehair.com/">More Info</a></li>
 		</ul>
 	</footer>
 </body>
